--- a/app/frontend/assets/styles/components/_animations.scss
+++ b/app/frontend/assets/styles/components/_animations.scss
@@ -69,6 +69,16 @@
         display: none;
     }
 }
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 @keyframes fade-out-height {
     0% {
         opacity: 1;
