--- a/app/apps/release_notes/templates/public/notificaties/snack_overzicht_laad_meer.html
+++ b/app/apps/release_notes/templates/public/notificaties/snack_overzicht_laad_meer.html
@@ -1,6 +1,7 @@
 <turbo-stream action="update" target="snack_overzicht_laad_meer">
 <template>
     <a data-action="notificaties--manager#laadMeerSnacks"
+       data-notificaties--manager-target="snackOverzichtLaadMeer"
        href="#"
        class="{% if not paginering.is_er_meer %}disabled{% endif %}">Laad meer</a>
 </template>
