Styling the tabs

--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -35,6 +35,7 @@ $blue-100: #f7f9fa;
 $blue-200: #eaeef1;
 $blue-900: #104ccb;
 $gray-600: #7f838a;
+$gray-800: #666666;
 
 $neutral-900: #244048;
 $neutral-600: #bfd2d9;
