--- a/app/apps/release_notes/templates/public/notificaties/snack_overzicht_tabs.html
+++ b/app/apps/release_notes/templates/public/notificaties/snack_overzicht_tabs.html
@@ -3,24 +3,29 @@
     <ul class="list-horizontal">
         {% if ongelezen_aantal > 0 %}
             <li class="{% if filter == 'alle' %}active{% endif %}">
-                <a data-notificaties--manager-overzicht-filter-param="alle"
+                <a role="button"
+                   data-notificaties--manager-overzicht-filter-param="alle"
                    data-action="notificaties--manager#overzichtTab"
                    href="{% url 'profiel_notificatie_lijst' %}?filter=alle">Alle</a>
             </li>
             <li class="{% if filter == 'ongelezen' %}active{% endif %}">
-                <a data-notificaties--manager-overzicht-filter-param="ongelezen"
+                <a role="button"
+                   data-notificaties--manager-overzicht-filter-param="ongelezen"
                    data-action="notificaties--manager#overzichtTab"
                    href="{% url 'profiel_notificatie_lijst' %}?filter=ongelezen">Ongelezen</a>
             </li>
             <li class="{% if filter == 'gelezen' %}active{% endif %}">
-                <a data-notificaties--manager-overzicht-filter-param="gelezen"
+                <a role="button"
+                   data-notificaties--manager-overzicht-filter-param="gelezen"
                    data-action="notificaties--manager#overzichtTab"
                    href="{% url 'profiel_notificatie_lijst' %}?filter=gelezen">Gelezen</a>
             </li>
             {% if filter != 'gelezen' and ongelezen_aantal > 0 %}
                 <li>
-                    <a data-action="notificaties--manager#markeerAlleAlsGelezen"
-                       href="{% url 'profiel_notificatie_lijst' %}">Markeer alle als gelezen</a>
+                    <a role="button"
+                       data-action="notificaties--manager#markeerAlleAlsGelezen"
+                       href="{% url 'profiel_notificatie_lijst' %}"
+                       class="small">Markeer alle gelezen</a>
                 </li>
             {% endif %}
         {% endif %}
