--- a/app/frontend/assets/styles/components/_notifications.scss
+++ b/app/frontend/assets/styles/components/_notifications.scss
@@ -3,7 +3,7 @@
     top: 35px;
     height: 100%;
     overflow: hidden;
-    // z-index: 20000;
+    z-index: 20000;
     pointer-events: none;
 
     @media (min-width: map-get($grid-breakpoints, lg)) {
