--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -54,8 +54,8 @@
                     &--large {
                         width: 98vw;
                         max-width: 400px;
-                        opacity: 1;
-                        pointer-events: all;
+                        // opacity: 1;
+                        // pointer-events: all;
                     }
 
                     &:not(.container__profiel_notificatie_lijst) {
