--- a/app/apps/release_notes/templates/public/notificaties/snack_overzicht_item.html
+++ b/app/apps/release_notes/templates/public/notificaties/snack_overzicht_item.html
@@ -6,7 +6,7 @@
         <li id="profiel_notificatie_{{ notificatie.id }}"
             data-id="{{ notificatie.id }}"
             data-controller="notificaties--snack-overzicht-item"
-            class="{% if not notificatie_is_unwatched %} is-watched{% endif %}{% if notificatie_is_watched %} unread{% endif %}"
+            class="{% if not notificatie_is_unwatched %}is-watched{% endif %}"
             {% if notificatie_is_unwatched %}data-verwijder-url="{% url 'notificatie_verwijderen_public' notificatie.id %}"{% endif %}
             data-notificaties--manager-target="snackOverzichtItem">
             <div class="container__icon">
@@ -15,6 +15,7 @@
             <div class="container__content">
                 <h2>{{ notificatie.titel }}</h2>
                 {% if notificatie.korte_beschrijving %}<p>{{ notificatie.korte_beschrijving }}</p>{% endif %}
+                <small>{{ notificatie.publicatie_datum }}</small>
             </div>
             <div class="container__status">
                 <span class="dot"></span>
