--- a/app/frontend/assets/styles/components/_notifications.scss
+++ b/app/frontend/assets/styles/components/_notifications.scss
@@ -306,7 +306,7 @@
                 }
             }
 
-            &:last-child {
+            &:nth-child(n + 4) {
                 flex: 1 0 auto;
                 text-align: right;
             }
@@ -328,10 +328,8 @@
             gap: 0.666em;
             justify-content: space-between;
             padding: 0.7em;
+            background-color: $green-100;
 
-            &.unread {
-                background-color: $green-100;
-            }
             > div {
                 flex: 1;
             }
@@ -368,8 +366,11 @@
             background-color: $primary;
             border-radius: 100%;
         }
-        .is-watched .dot {
-            display: none;
+        .is-watched {
+            background-color: transparent;
+            .dot {
+                display: none;
+            }
         }
     }
 }
