--- a/app/frontend/assets/styles/components/_animations.scss
+++ b/app/frontend/assets/styles/components/_animations.scss
@@ -58,6 +58,17 @@
     }
 }
 
+@keyframes slide-out-to-bottom {
+    0% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    100% {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+}
+
 @keyframes fade-out {
     0% {
         opacity: 1;
